สร้างโดยใช้ Colab

--- a/ThaiNovel_OCR_v2.ipynb
+++ b/ThaiNovel_OCR_v2.ipynb
@@ -13,6 +13,28 @@
     {
       "cell_type": "code",
       "source": [
+        "# Cell ใหม่: Mount Drive + Create Folders\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# สร้าง folders ใน Drive\n",
+        "import os\n",
+        "BASE = '/content/drive/MyDrive/OCR'  # ← ชื่อ folder ของคุณ\n",
+        "\n",
+        "for folder in ['raw_ocr', 'batches', 'cleaned_gpt', 'cleaned_claude', 'final_corpus', 'reports', 'training_pairs']:\n",
+        "    os.makedirs(f'{BASE}/{folder}', exist_ok=True)\n",
+        "\n",
+        "print(\"✅ Folders ready in Drive!\")"
+      ],
+      "metadata": {
+        "id": "Fm_K-lJ9hX8B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ============================================\n",
         "# 📌 Block 1: Setup & Import\n",
         "# ============================================\n",
@@ -50,6 +72,9 @@
         "# ============================================\n",
         "class Config:\n",
         "    \"\"\"Configuration สำหรับ OCR Processing - Thai Novel Optimized\"\"\"\n",
+        "\n",
+        "# ⚠️ แก้ paths ตรงนี้\n",
+        "    BASE = '/content/drive/MyDrive/OCR'  # ← folder หลักใน Drive\n",
         "\n",
         "    # Paths\n",
         "    RAW_OCR_DIR = 'raw_ocr'\n",
