Enhanced Rich Metadata & Run me

--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -906,11 +906,11 @@
         "print(\"✅ Enhanced LLM Client with Metadata Analysis ready\")"
       ],
       "metadata": {
-        "id": "dQocnXzKWfVC",
-        "outputId": "0c0acacf-61f9-4dd5-9ce5-f761b8002812",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dQocnXzKWfVC",
+        "outputId": "0c0acacf-61f9-4dd5-9ce5-f761b8002812"
       },
       "execution_count": 15,
       "outputs": [
@@ -1547,11 +1547,11 @@
         "print(\"✅ Enhanced OCR Processor with Metadata ready\")"
       ],
       "metadata": {
-        "id": "inUR98QoXBv_",
-        "outputId": "1bd9bb2b-5198-4195-fbe1-6168581986cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "inUR98QoXBv_",
+        "outputId": "1bd9bb2b-5198-4195-fbe1-6168581986cd"
       },
       "execution_count": 16,
       "outputs": [
@@ -2045,11 +2045,11 @@
         "    print(f\"Tokens used: {result.get('tokens', 0):,}\")"
       ],
       "metadata": {
-        "id": "kxUrfgvdRN0A",
-        "outputId": "01a17aad-e2b9-4cfb-ba5a-031399937837",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kxUrfgvdRN0A",
+        "outputId": "01a17aad-e2b9-4cfb-ba5a-031399937837"
       },
       "execution_count": 14,
       "outputs": [
@@ -2081,6 +2081,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ✅ RUN ME\n",
+        "processor = OCRProcessor(analyze_metadata=True)  # หรือ False ถ้ายังไม่อยากคิดเมทาดาทา\n",
+        "result = processor.process_file(Path(Config.RAW_OCR_DIR) / \"Namiya.txt\")\n",
+        "print(\"\\n📄 Output:\", result.get('cleaned_path'))\n",
+        "show_usage_log_summary()"
+      ],
+      "metadata": {
+        "id": "_XBBx0VLX6a7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
