Enhance Rich Metadata and Run me

--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -2085,14 +2085,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# ✅ RUN ME\n",
-        "processor = OCRProcessor(analyze_metadata=True)  # หรือ False ถ้ายังไม่อยากคิดเมทาดาทา\n",
+        "# 🚀 Run me\n",
+        "processor = OCRProcessor(analyze_metadata=True)  # True = มี metadata, False = แค่ clean\n",
         "result = processor.process_file(Path(Config.RAW_OCR_DIR) / \"Namiya.txt\")\n",
-        "print(\"\\n📄 Output:\", result.get('cleaned_path'))\n",
+        "\n",
+        "print(\"\\n📊 Run Summary:\")\n",
+        "print(\"Success:\", result.get('success'))\n",
+        "if result.get('success'):\n",
+        "    print(\"Output file:\", result.get('cleaned_path'))\n",
+        "    print(\"Cost: $\", result.get('cost'))\n",
+        "    print(\"Tokens used:\", result.get('tokens'))\n",
+        "\n",
         "show_usage_log_summary()"
       ],
       "metadata": {
-        "id": "_XBBx0VLX6a7"
+        "id": "BM3nfoOQYOtL"
       },
       "execution_count": null,
       "outputs": []
