Update rich metadata

--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RWrHi-Zr9pV",
-        "outputId": "8bc30447-0d51-40f2-ffd8-1394a6818a01"
+        "outputId": "4b66002a-9288-4182-e037-5f9af6c29320"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Qwt1E6bsAvI",
-        "outputId": "fa6fdaef-f899-47f4-da18-56650d612ddf"
+        "outputId": "fb9ab72c-524e-4b25-d1e7-64aa168682ae"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZdskcZ9sDdS",
-        "outputId": "2aef724b-650b-4c03-ef69-85bbe906943a"
+        "outputId": "0424bfe3-567b-4cc1-d509-c8df97025905"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZhQVDdGTsRzC",
-        "outputId": "e7d0ed48-1037-424d-ede7-aaec8b5c3cdf"
+        "outputId": "bd3f980c-8af7-4b9e-a2ad-41ab684f1f80"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,9 +451,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HTXIqNCsUvm",
-        "outputId": "29416aca-0800-4dec-8e75-ebaca6841aa6"
+        "outputId": "4b94c5db-2a9b-4155-ed79-d55005681d4a"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,9 +910,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dQocnXzKWfVC",
-        "outputId": "0c0acacf-61f9-4dd5-9ce5-f761b8002812"
+        "outputId": "ec240266-9c10-42c3-f7d2-725d36287eb9"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,9 +998,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2w7mgSmjtWbs",
-        "outputId": "bf655f01-958e-4c13-b8c8-fbfc0b650777"
+        "outputId": "c7631191-8c1c-4236-fb08-e288e5271dca"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,9 +1099,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9kM8TqqHtgKA",
-        "outputId": "ecaf60ca-5c4e-4848-b46d-b9bd3658581d"
+        "outputId": "950ccf72-4a88-4524-f961-c4c095e8a710"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,9 +1551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "inUR98QoXBv_",
-        "outputId": "1bd9bb2b-5198-4195-fbe1-6168581986cd"
+        "outputId": "1ccdf317-efd5-4f41-91d8-baa798b203d7"
       },
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,9 +1700,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bqbfvrs5uYJa",
-        "outputId": "828d1fe8-d5b1-412c-f0ca-ea3dbb851b9d"
+        "outputId": "0b202cef-ab19-4bf2-82aa-2b31405e286b"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1801,9 +1801,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpviaRvnugCB",
-        "outputId": "389a93b7-c099-4500-c1ce-542f8d03e013"
+        "outputId": "99c3c39d-751d-4823-8077-2fa0b1bcb722"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -2002,7 +2002,7 @@
         "id": "EnxJQ_S-wVUM",
         "outputId": "e78811aa-36c8-4e20-a0cb-7e3307caf86f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2032,59 +2032,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# ประมวลผลไฟล์เดี่ยว\n",
-        "processor = OCRProcessor()\n",
-        "result = processor.process_file(Path(Config.RAW_OCR_DIR) / \"Namiya.txt\")\n",
-        "\n",
-        "# แสดงสรุปค่าใช้จ่าย\n",
-        "print(\"\\n📊 Summary:\")\n",
-        "print(f\"Success: {result.get('success')}\")\n",
-        "if result.get('success'):\n",
-        "    print(f\"Output file: {result.get('cleaned_path')}\")\n",
-        "    print(f\"Cost: ${result.get('cost', 0):.4f}\")\n",
-        "    print(f\"Tokens used: {result.get('tokens', 0):,}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kxUrfgvdRN0A",
-        "outputId": "01a17aad-e2b9-4cfb-ba5a-031399937837"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ OpenAI client ready (Model: gpt-4o-mini)\n",
-            "\n",
-            "📄 Processing: Namiya.txt\n",
-            "   📖 Multi-page file detected\n",
-            "   📊 Found 5 pages\n",
-            "   📘 Book: (ปาฏิหารย์ร้านชำของคุณนามิยะ)\n",
-            "   🧾 Chapter: (บทที่ 2 เสียงหีบเพลงปากในยามดึกสงัด 2-8)\n",
-            "   📏 Total content: 4,250 chars (~3,188 tokens)\n",
-            "   🚀 Processing all 5 pages in one batch...\n",
-            "   ✅ Saved: Namiya_clean_20250826_164557.txt\n",
-            "   📄 Pages: 5\n",
-            "   🔤 Tokens: 4,296\n",
-            "   ⏱ Time: 43.6s\n",
-            "   💰 Cost: $0.0015 (~0.05 บาท)\n",
-            "   📋 Validation: ✅0 ⚠️3 ❌2 (avg: 0.66)\n",
-            "\n",
-            "📊 Summary:\n",
-            "Success: True\n",
-            "Output file: /content/drive/MyDrive/OCR/cleaned/Namiya_clean_20250826_164557.txt\n",
-            "Cost: $0.0015\n",
-            "Tokens used: 4,296\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 🚀 Run me\n",
         "processor = OCRProcessor(analyze_metadata=True)  # True = มี metadata, False = แค่ clean\n",
         "result = processor.process_file(Path(Config.RAW_OCR_DIR) / \"Namiya.txt\")\n",
@@ -2099,10 +2046,77 @@
         "show_usage_log_summary()"
       ],
       "metadata": {
-        "id": "BM3nfoOQYOtL"
+        "id": "BM3nfoOQYOtL",
+        "outputId": "2dc4c6f1-9dc3-4f28-9af4-28663188970d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 964
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ OpenAI client ready (Model: gpt-4o-mini)\n",
+            "\n",
+            "📄 Processing: Namiya.txt\n",
+            "   🔍 Metadata analysis: ENABLED\n",
+            "   📖 Multi-page file detected\n",
+            "   📊 Found 5 pages\n",
+            "   📘 Book: (ปาฏิหารย์ร้านชำของคุณนามิยะ)\n",
+            "   🧾 Chapter: (บทที่ 2 เสียงหีบเพลงปากในยามดึกสงัด 2-8)\n",
+            "   📏 Total content: 4,250 chars (~3,188 tokens)\n",
+            "   🚀 Processing all 5 pages in one batch...\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 1\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 2\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 3\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 4\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 4\n",
+            "   🔍 Analyzing metadata for each page...\n",
+            "      Analyzing page 1...\n",
+            "      Analyzing page 2...\n",
+            "      Analyzing page 3...\n",
+            "      Analyzing page 4...\n",
+            "      Analyzing page 4...\n",
+            "   ✅ Metadata analysis complete: 4,992 tokens, $0.0012\n",
+            "   ✅ Saved: Namiya_clean_20250829_134344.txt\n",
+            "   📄 Pages: 5\n",
+            "   🔤 Tokens: 9,301\n",
+            "   ⏱ Time: 32.0s\n",
+            "   💰 Cost: $0.0027 (~0.09 บาท)\n",
+            "   📋 Validation: ✅0 ⚠️5 ❌0 (avg: 0.90)\n",
+            "   🔍 Metadata analyzed: 4 pages\n",
+            "\n",
+            "📊 Run Summary:\n",
+            "Success: True\n",
+            "Output file: /content/drive/MyDrive/OCR/cleaned/Namiya_clean_20250829_134344.txt\n",
+            "Cost: $ 0.0026727\n",
+            "Tokens used: 9301\n",
+            "\n",
+            "📊 Usage Log Summary (all runs)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "Object of type int64 is not JSON serializable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-462120127.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tokens used:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tokens'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mshow_usage_log_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-3178396450.py\u001b[0m in \u001b[0;36mshow_usage_log_summary\u001b[0;34m()\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n📊 Usage Log Summary (all runs)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_ascii\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/__init__.py\u001b[0m in \u001b[0;36mdumps\u001b[0;34m(obj, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    236\u001b[0m         \u001b[0mcheck_circular\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcheck_circular\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_nan\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mallow_nan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m         \u001b[0mseparators\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mseparators\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdefault\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msort_keys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msort_keys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 238\u001b[0;31m         **kw).encode(obj)\n\u001b[0m\u001b[1;32m    239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/encoder.py\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    200\u001b[0m         \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_one_shot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 202\u001b[0;31m             \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    203\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    430\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    431\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 432\u001b[0;31m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    433\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmarkers\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode_dict\u001b[0;34m(dct, _current_indent_level)\u001b[0m\n\u001b[1;32m    404\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    405\u001b[0m                     \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 406\u001b[0;31m                 \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mchunks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    407\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnewline_indent\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m             \u001b[0m_current_indent_level\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    437\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Circular reference detected\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    438\u001b[0m                 \u001b[0mmarkers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmarkerid\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 439\u001b[0;31m             \u001b[0mo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    440\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    441\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmarkers\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/json/encoder.py\u001b[0m in \u001b[0;36mdefault\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m         \"\"\"\n\u001b[0;32m--> 180\u001b[0;31m         raise TypeError(f'Object of type {o.__class__.__name__} '\n\u001b[0m\u001b[1;32m    181\u001b[0m                         f'is not JSON serializable')\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: Object of type int64 is not JSON serializable"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
