Update Checker Block

--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -13,6 +13,112 @@
     {
       "cell_type": "code",
       "source": [
+        "# ==== Quick Health Check for Colab + Paths + Files ====\n",
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "def colab_health_check():\n",
+        "    print(\"🔎 Colab Health Check\")\n",
+        "    print(\"=\"*40)\n",
+        "    # 1) Drive mount\n",
+        "    drive_root = Path(\"/content/drive\")\n",
+        "    if not drive_root.exists():\n",
+        "        try:\n",
+        "            from google.colab import drive\n",
+        "            print(\"⚠️ Drive not mounted → mounting...\")\n",
+        "            drive.mount('/content/drive')\n",
+        "        except Exception as e:\n",
+        "            print(\"❌ Cannot import google.colab. Are you in Colab?\", e)\n",
+        "            return False\n",
+        "\n",
+        "    print(\"✅ Drive mounted\")\n",
+        "\n",
+        "    # 2) Config paths\n",
+        "    try:\n",
+        "        base = Path(Config.BASE)\n",
+        "        raw_dir = Path(Config.RAW_OCR_DIR)\n",
+        "        print(f\"BASE        : {base}\")\n",
+        "        print(f\"RAW_OCR_DIR : {raw_dir}\")\n",
+        "        print(f\"BASE exists?: {base.exists()}\")\n",
+        "        print(f\"RAW exists? : {raw_dir.exists()}\")\n",
+        "    except NameError:\n",
+        "        print(\"❌ Config not loaded. Run Block 2 first.\")\n",
+        "        return False\n",
+        "\n",
+        "    # 3) List files in RAW\n",
+        "    if raw_dir.exists():\n",
+        "        files = sorted(list(raw_dir.glob(\"*.txt\")))\n",
+        "        if files:\n",
+        "            print(f\"📄 .txt files in RAW ({len(files)}):\")\n",
+        "            for p in files[:10]:\n",
+        "                try:\n",
+        "                    sz = p.stat().st_size\n",
+        "                    print(f\"  - {p.name}  ({sz} bytes)\")\n",
+        "                except Exception:\n",
+        "                    print(f\"  - {p.name}\")\n",
+        "        else:\n",
+        "            print(\"⚠️ No .txt files found in RAW_OCR_DIR\")\n",
+        "    else:\n",
+        "        print(\"❌ RAW_OCR_DIR does not exist\")\n",
+        "\n",
+        "    # 4) OpenAI key presence (masked)\n",
+        "    key = os.environ.get(\"OPENAI_API_KEY\", \"\")\n",
+        "    if key:\n",
+        "        print(\"🔐 OPENAI_API_KEY: set (**********\" + key[-6:] + \")\")\n",
+        "    else:\n",
+        "        print(\"⚠️ OPENAI_API_KEY not set. Run Block 2 to load key.\")\n",
+        "\n",
+        "    print(\"=\"*40)\n",
+        "    # Ready if drive mounted, paths exist, and key set\n",
+        "    ready = drive_root.exists() and base.exists() and raw_dir.exists() and bool(key)\n",
+        "    print(\"✅ Ready to process!\" if ready else \"❗ Not ready — fix the warnings above.\")\n",
+        "    return ready\n",
+        "\n",
+        "# Run the check\n",
+        "colab_health_check()"
+      ],
+      "metadata": {
+        "id": "Ah66recQ82pe",
+        "outputId": "fcfb7a09-4ebe-4117-e8da-bcf838e881d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🔎 Colab Health Check\n",
+            "========================================\n",
+            "✅ Drive mounted\n",
+            "BASE        : /content/drive/MyDrive/Corpus_Books_OCR\n",
+            "RAW_OCR_DIR : /content/drive/MyDrive/Corpus_Books_OCR/raw_ocr\n",
+            "BASE exists?: True\n",
+            "RAW exists? : True\n",
+            "📄 .txt files in RAW (1):\n",
+            "  - current_chapter.txt  (6773 bytes)\n",
+            "🔐 OPENAI_API_KEY: set (**********GsqIQA)\n",
+            "========================================\n",
+            "✅ Ready to process!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#!/usr/bin/env python3\n",
         "# -*- coding: utf-8 -*-\n",
         "\n",
@@ -55,15 +161,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RWrHi-Zr9pV",
-        "outputId": "4b66002a-9288-4182-e037-5f9af6c29320"
+        "outputId": "028de4c4-0a48-45e7-db69-96e14bb8fb52"
       },
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "✅ Libraries loaded\n"
           ]
         }
@@ -78,7 +184,7 @@
         "\n",
         "def load_api_key():\n",
         "    \"\"\"โหลด API key จากไฟล์ (รองรับทั้ง .env และ .env.txt)\"\"\"\n",
-        "    base_path = \"/content/drive/MyDrive/OCR\" if IN_COLAB else \"./OCR\"\n",
+        "    base_path = \"/content/drive/MyDrive/Corpus_Books_OCR\" if IN_COLAB else \"./OCR\"\n",
         "\n",
         "    # ลองหาไฟล์ทั้งสองแบบ\n",
         "    possible_files = [\n",
@@ -128,7 +234,7 @@
         "    # MODEL = \"claude-3-haiku\"\n",
         "\n",
         "    # Paths (Google Drive)\n",
-        "    BASE = '/content/drive/MyDrive/OCR' if IN_COLAB else './OCR'\n",
+        "    BASE = '/content/drive/MyDrive/Corpus_Books_OCR' if IN_COLAB else './OCR'\n",
         "\n",
         "    RAW_OCR_DIR = f'{BASE}/raw_ocr'\n",
         "    CLEANED_DIR = f'{BASE}/cleaned'\n",
@@ -145,7 +251,7 @@
         "\n",
         "    # Cost tracking (แม่นยำขึ้น - แยก input/output)\n",
         "    PRICE_PER_1K_TOKENS = {\n",
-        "        'gpt-4o-mini': {'input': 0.00015, 'output': 0.0006},  # $0.15/$0.60 per 1M\n",
+        "        'gpt-4o-mini': {'input': 0.00015, 'output': 0.0006},  # $0.60 per 1M\n",
         "        'gpt-3.5-turbo': {'input': 0.0005, 'output': 0.0015},\n",
         "        'claude-3-haiku': {'input': 0.00025, 'output': 0.00125}\n",
         "    }\n",
@@ -162,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Qwt1E6bsAvI",
-        "outputId": "fb9ab72c-524e-4b25-d1e7-64aa168682ae"
+        "outputId": "fcc56bc0-c164-4366-8069-29b5587f8950"
       },
-      "execution_count": 2,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZdskcZ9sDdS",
-        "outputId": "0424bfe3-567b-4cc1-d509-c8df97025905"
+        "outputId": "e7b790dc-8921-45f2-b00b-35e5b53d365a"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZhQVDdGTsRzC",
-        "outputId": "bd3f980c-8af7-4b9e-a2ad-41ab684f1f80"
+        "outputId": "13d6148a-f83e-44d0-e13b-436aaa2e640a"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,9 +557,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HTXIqNCsUvm",
-        "outputId": "4b94c5db-2a9b-4155-ed79-d55005681d4a"
+        "outputId": "e9151da4-e59e-4319-8b12-051dd37e9a32"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,9 +1016,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dQocnXzKWfVC",
-        "outputId": "ec240266-9c10-42c3-f7d2-725d36287eb9"
+        "outputId": "fa8590e9-b014-4746-cc9e-d9e7080cc71f"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,9 +1104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2w7mgSmjtWbs",
-        "outputId": "c7631191-8c1c-4236-fb08-e288e5271dca"
+        "outputId": "64f30f4d-db6b-48e6-f623-d8c946d14a9f"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,9 +1205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9kM8TqqHtgKA",
-        "outputId": "950ccf72-4a88-4524-f961-c4c095e8a710"
+        "outputId": "1709ad98-7155-4eb5-b05a-369b0001fc9f"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,9 +1657,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "inUR98QoXBv_",
-        "outputId": "1ccdf317-efd5-4f41-91d8-baa798b203d7"
+        "outputId": "499803b2-b017-4ae4-8fa0-0c8001ac8fa8"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,9 +1806,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bqbfvrs5uYJa",
-        "outputId": "0b202cef-ab19-4bf2-82aa-2b31405e286b"
+        "outputId": "dcd49613-e042-43b1-f1d7-dc1c98a68c4a"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1801,9 +1907,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpviaRvnugCB",
-        "outputId": "99c3c39d-751d-4823-8077-2fa0b1bcb722"
+        "outputId": "7751e9dc-382d-4f65-f3dc-e00cd754574e"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,9 +2106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EnxJQ_S-wVUM",
-        "outputId": "e78811aa-36c8-4e20-a0cb-7e3307caf86f"
+        "outputId": "05770e68-3369-47ed-84d9-83b5708f624d"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2015,16 +2121,16 @@
             "\n",
             "📒 Usage Log Summary (All time)\n",
             "==================================================\n",
-            "Total files         : 0\n",
-            "Total pages         : 0\n",
-            "Total tokens        : 0\n",
-            "Input tokens        : 0\n",
-            "Output tokens       : 0\n",
-            "Total cost (USD)    : $0.0000\n",
-            "Total cost (THB)    : ~0.00\n",
-            "Avg cost per page   : $0.0000\n",
-            "Most used model     : N/A\n",
-            "Validation stats    : {}\n"
+            "Total files         : 7\n",
+            "Total pages         : 15\n",
+            "Total tokens        : 13,597\n",
+            "Input tokens        : 8,843\n",
+            "Output tokens       : 4,754\n",
+            "Total cost (USD)    : $0.0042\n",
+            "Total cost (THB)    : ~0.15\n",
+            "Avg cost per page   : $0.0003\n",
+            "Most used model     : gpt-4o-mini\n",
+            "Validation stats    : {'META_ANALYSIS': 5, 'PASS': 2}\n"
           ]
         }
       ]
@@ -2032,29 +2138,64 @@
     {
       "cell_type": "code",
       "source": [
-        "# 🚀 Run me\n",
         "from pathlib import Path\n",
         "\n",
-        "processor = OCRProcessor(analyze_metadata=True)  # เปิด Rich metadata\n",
-        "result = processor.process_file(Path(Config.RAW_OCR_DIR) / \"Namiya.txt\")\n",
+        "fname = \"current_chapter.txt\"   # ตั้งชื่อไฟล์กลางไว้เสมอ\n",
+        "processor = OCRProcessor(analyze_metadata=True)   # หรือ False ถ้าอยากประหยัดโทเคน\n",
+        "result = processor.process_file(Path(Config.RAW_OCR_DIR) / fname)\n",
         "\n",
         "print(\"\\n📊 Run Summary:\")\n",
         "print(\"Success:\", result.get('success'))\n",
         "if result.get('success'):\n",
         "    print(\"Output file:\", result.get('cleaned_path'))\n",
-        "    print(\"Cost: $\", result.get('cost'))\n",
-        "    print(\"Tokens used:\", result.get('tokens'))\n",
-        "\n",
-        "# ✅ แก้ตรงนี้\n",
-        "s = UsageLogger().get_summary()\n",
-        "print(\"\\n📒 Usage Log Summary (all runs)\")\n",
-        "print(s)  # print dict ตรง ๆ, ไม่ต้อง json.dumps"
+        "    print(\"Cost (USD):\", result.get('cost'))\n",
+        "    print(\"Tokens used:\", result.get('tokens'))"
       ],
       "metadata": {
-        "id": "ZUmolxV3IQAb"
+        "id": "ZUmolxV3IQAb",
+        "outputId": "bfbd9ec3-1621-4e87-b024-7a61c16810f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ OpenAI client ready (Model: gpt-4o-mini)\n",
+            "\n",
+            "📄 Processing: current_chapter.txt\n",
+            "   🔍 Metadata analysis: ENABLED\n",
+            "   📖 Multi-page file detected\n",
+            "   📊 Found 3 pages\n",
+            "   📏 Total content: 2,762 chars (~2,072 tokens)\n",
+            "   🚀 Processing all 3 pages in one batch...\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 1\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 2\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 3\n",
+            "   🔍 Analyzing metadata for each page...\n",
+            "      Analyzing page 1...\n",
+            "      Analyzing page 2...\n",
+            "      Analyzing page 3...\n",
+            "   ✅ Metadata analysis complete: 3,065 tokens, $0.0007\n",
+            "   ✅ Saved: current_chapter_clean_20250902_104704.txt\n",
+            "   📄 Pages: 3\n",
+            "   🔤 Tokens: 5,996\n",
+            "   ⏱ Time: 19.4s\n",
+            "   💰 Cost: $0.0017 (~0.06 บาท)\n",
+            "   📋 Validation: ✅0 ⚠️3 ❌0 (avg: 0.90)\n",
+            "   🔍 Metadata analyzed: 3 pages\n",
+            "\n",
+            "📊 Run Summary:\n",
+            "Success: True\n",
+            "Output file: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter_clean_20250902_104704.txt\n",
+            "Cost (USD): 0.0017386499999999998\n",
+            "Tokens used: 5996\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
